# artifex-client-web-yew

./: Cargo.toml  README.md  Trunk.toml  build.rs  index.html  styles.css
proto/: artifex.proto
src/: lib.rs  main.rs
src/components/: execution.rs  inspection.rs  mod.rs  settings.rs  tab.rs  tab_list.rs  upgrade.rs
src/contexts/: mod.rs  server.rs
